--- a/src/assets/locale/locale_kr.json
+++ b/src/assets/locale/locale_kr.json
@@ -5,6 +5,7 @@
   "DESIGN": "디자이너",
   "PM": "기획자",
   "ADMIN": "관리자",
-  "GENERAL":"일반 부원",
+  "MEMBER":"일반 부원",
+  "GENERAL" : "대기중",
   "EDUCATION": "교육부원"
 }
